refactor: add tree to nodes